--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "lint:fix": "biome check src/ --fix",
     "format": "biome format src/",
     "test": "vitest run",
-    "prepare": "husky"
+    "prepare": "husky",
+    "preinstall": "npx only-allow pnpm"
   },
   "dependencies": {
     "@asteasolutions/zod-to-openapi": "^7.0.0",
