--- a/package.json
+++ b/package.json
@@ -20,10 +20,15 @@
     "preinstall": "npx only-allow pnpm"
   },
   "dependencies": {
+    "@aave/contract-helpers": "^1.30.5",
+    "@aave/math-utils": "^1.30.5",
     "@asteasolutions/zod-to-openapi": "^7.0.0",
+    "@bgd-labs/aave-address-book": "^4.7.3",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
     "envalid": "^8.0.0",
+    "ethers": "^5.7.2",
     "express": "^4.19.2",
     "express-rate-limit": "^7.2.0",
     "helmet": "^8.0.0",
