--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,4 @@
-version: '2.29'
+version: '3.8'
 
 services:
   billy191-backend:
@@ -21,3 +21,8 @@ services:
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_DB=${POSTGRES_DB}
+    volumes:
+      - billy191-db-data:/var/lib/postgresql/data
+
+volumes:
+  billy191-db-data:
