chore: update README and package.json

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "Billy191-Backend",
+  "name": "billy191-backend",
   "version": "1.0.0",
-  "description": "Billy191 Backend Express",
+  "description": "Billy191.live Backend",
   "author": "Billy191",
   "repository": "",
   "license": "MIT",
