--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@aave/math-utils": "^1.30.5",
     "@asteasolutions/zod-to-openapi": "^7.0.0",
     "@bgd-labs/aave-address-book": "^4.7.3",
+    "@prisma/client": "^6.1.0",
     "cors": "^2.8.5",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
@@ -46,6 +47,7 @@
     "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
     "pino-pretty": "^11.0.0",
+    "prisma": "^6.1.0",
     "rimraf": "^6.0.0",
     "supertest": "^7.0.0",
     "tsup": "^8.0.2",
