--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "express-rate-limit": "^7.5.0",
     "helmet": "^8.0.0",
     "http-status-codes": "^2.3.0",
+    "jsdom": "^26.0.0",
+    "p-queue": "^8.1.0",
     "pino": "^9.6.0",
     "pino-http": "^10.3.0",
     "swagger-ui-express": "^5.0.1",
